--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <li>
             <span>html-css</span>
             <ol>
-                <li>  <a href="html-css/module-1/index.html">homme-work1-2</a></li>
+                <li>  <a href="html-css/module-1/index.html">homme work 1-2</a></li>
             </ol>
         </li>
         <li>
