--- a/html-css/module-3/index.html
+++ b/html-css/module-3/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    <header>
+    <header class="container">
         <nav class="top__menu">
             <ul>
                 <li><a href="#">lifestyle</a></li>
@@ -18,16 +18,16 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <section>
+    <main class="container">
+        <section> 
             <div class="box-left">
-                <img src="img/image_1.png" alt="Festival">
+                <img class="img-box" src="img/image_1.png" alt="Festival">
                 <p>Lifestyle</p>
                 <h1>More than just a music festival</h1>
                 <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</span>
             </div>
             <div class="box-right">
-                <img src="img/image_2.png" alt="Coffe">
+                <img class="img-box" src="img/image_2.png" alt="Coffe">
                 <p>Lifestyle</p>
                 <h1>Life tastes better with coffee</h1>
                 <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</span>
@@ -35,27 +35,27 @@
         </section>
         <section>
                 <div class="box box-left">
-                    <img src="img/image_3.png" alt="American dream">
+                    <img class="img-box" src="img/image_3.png" alt="American dream">
                     <p>Photodiary</p>
                     <h1>American dream</h1>
                     <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</span>
                 </div>
                 <div class="box box-right">
-                    <img src="img/image_4.png" alt="Alps">
+                    <img class="img-box" src="img/image_4.png" alt="Alps">
                     <p>Photodiary</p>
                     <h1>A day exploring the Alps</h1>
                     <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</span>
                 </div>
         </section>
-        <section>
+        <section class="last-section">
                 <div class="box box-left">
-                    <img src="img/image_5.png" alt="Song for running">
+                    <img class="img-box" src="img/image_5.png" alt="Song for running">
                     <p>Lifestyle</p>
                     <h1>Top 10 song for running</h1>
                     <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</span>
                 </div>
                 <div class="box box-right">
-                    <img src="img/image_6.png" alt="Winter days">
+                    <img class="img-box" src="img/image_6.png" alt="Winter days">
                     <p>Lifestyle</p>
                     <h1>Cold winter days</h1>
                     <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</span>
