--- a/html-css/module-3/index.html
+++ b/html-css/module-3/index.html
@@ -20,13 +20,13 @@
     </header>
     <main class="container">
         <section> 
-            <div class="box-left">
+            <div class="box box-left">
                 <img class="img-box" src="img/image_1.png" alt="Festival">
                 <p>Lifestyle</p>
                 <h1>More than just a music festival</h1>
                 <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</span>
             </div>
-            <div class="box-right">
+            <div class="box">
                 <img class="img-box" src="img/image_2.png" alt="Coffe">
                 <p>Lifestyle</p>
                 <h1>Life tastes better with coffee</h1>
@@ -40,7 +40,7 @@
                     <h1>American dream</h1>
                     <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</span>
                 </div>
-                <div class="box box-right">
+                <div class="box">
                     <img class="img-box" src="img/image_4.png" alt="Alps">
                     <p>Photodiary</p>
                     <h1>A day exploring the Alps</h1>
@@ -54,7 +54,7 @@
                     <h1>Top 10 song for running</h1>
                     <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</span>
                 </div>
-                <div class="box box-right">
+                <div class="box">
                     <img class="img-box" src="img/image_6.png" alt="Winter days">
                     <p>Lifestyle</p>
                     <h1>Cold winter days</h1>
