--- a/html-css/module-1-2/index.html
+++ b/html-css/module-1-2/index.html
@@ -7,7 +7,7 @@
     <title>First</title>
 </head>
 <body>
-    <header class="container">
+    <header>
         <nav class="top__menu">
             <ul>
                 <li><a href="#">lifestyle</a></li>
@@ -17,16 +17,16 @@
             </ul>
         </nav>
     </header>
-    <main class="container">
-        <section> 
-            <div class="box box-left">
-                <img class="img-box" src="img/image_1.png" alt="Festival">
+    <main>
+        <section>
+            <div class="box-left">
+                <img src="img/image_1.png" alt="Festival">
                 <p>Lifestyle</p>
                 <h1>More than just a music festival</h1>
                 <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</span>
             </div>
-            <div class="box">
-                <img class="img-box" src="img/image_2.png" alt="Coffe">
+            <div class="box-right">
+                <img src="img/image_2.png" alt="Coffe">
                 <p>Lifestyle</p>
                 <h1>Life tastes better with coffee</h1>
                 <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</span>
@@ -34,13 +34,13 @@
         </section>
         <section>
                 <div class="box box-left">
-                    <img class="img-box" src="img/image_3.png" alt="American dream">
+                    <img src="img/image_3.png" alt="American dream">
                     <p>Photodiary</p>
                     <h1>American dream</h1>
                     <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</span>
                 </div>
-                <div class="box">
-                    <img class="img-box" src="img/image_4.png" alt="Alps">
+                <div class="box box-right">
+                    <img src="img/image_4.png" alt="Alps">
                     <p>Photodiary</p>
                     <h1>A day exploring the Alps</h1>
                     <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</span>
