--- a/html-css/module-3/index.html
+++ b/html-css/module-3/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>First</title>
+    <title>Third</title>
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
     <header class="container">
@@ -19,30 +20,46 @@
     </header>
     <main class="container">
         <section> 
-            <div class="article">
+            <div class="box box-left">
                 <img class="img-box" src="img/image_1.png" alt="Festival">
                 <p>Lifestyle</p>
-                <h2>More than just a music festival</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+                <h1>More than just a music festival</h1>
+                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</span>
             </div>
-            <div class="article">
+            <div class="box">
                 <img class="img-box" src="img/image_2.png" alt="Coffe">
                 <p>Lifestyle</p>
-                <h2>Life tastes better with coffee</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+                <h1>Life tastes better with coffee</h1>
+                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</span>
             </div>
-            <div class="article">
-                <img class="img-box" src="img/image_3.png" alt="American dream">
-                <p>Photodiary</p>
-                <h2>American dream</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
-            </div>
-            <div class="article">
-                <img class="img-box" src="img/image_4.png" alt="Alps">
-                <p>Photodiary</p>
-                <h2>A day exploring the Alps</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
-            </div>
+        </section>
+        <section>
+                <div class="box box-left">
+                    <img class="img-box" src="img/image_3.png" alt="American dream">
+                    <p>Photodiary</p>
+                    <h1>American dream</h1>
+                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</span>
+                </div>
+                <div class="box">
+                    <img class="img-box" src="img/image_4.png" alt="Alps">
+                    <p>Photodiary</p>
+                    <h1>A day exploring the Alps</h1>
+                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</span>
+                </div>
+        </section>
+        <section class="last-section">
+                <div class="box box-left">
+                    <img class="img-box" src="img/image_5.png" alt="Song for running">
+                    <p>Lifestyle</p>
+                    <h1>Top 10 song for running</h1>
+                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</span>
+                </div>
+                <div class="box">
+                    <img class="img-box" src="img/image_6.png" alt="Winter days">
+                    <p>Lifestyle</p>
+                    <h1>Cold winter days</h1>
+                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</span>
+                </div>
         </section>
         <form>
             <button>Load More</button>
