--- a/html-css/module-3/index.html
+++ b/html-css/module-3/index.html
@@ -20,46 +20,42 @@
     </header>
     <main class="container">
         <section> 
-            <div class="box box-left">
-                <img class="img-box" src="img/image_1.png" alt="Festival">
+            <div class="article">
+                <img class="article-img" src="img/image_1.png" alt="Festival">
                 <p>Lifestyle</p>
-                <h1>More than just a music festival</h1>
+                <h2>More than just a music festival</h2>
                 <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</span>
             </div>
-            <div class="box">
-                <img class="img-box" src="img/image_2.png" alt="Coffe">
+            <div class="article">
+                <img class="article-img" src="img/image_2.png" alt="Coffe">
                 <p>Lifestyle</p>
-                <h1>Life tastes better with coffee</h1>
+                <h2>Life tastes better with coffee</h2>
                 <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</span>
             </div>
-        </section>
-        <section>
-                <div class="box box-left">
-                    <img class="img-box" src="img/image_3.png" alt="American dream">
-                    <p>Photodiary</p>
-                    <h1>American dream</h1>
-                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</span>
-                </div>
-                <div class="box">
-                    <img class="img-box" src="img/image_4.png" alt="Alps">
-                    <p>Photodiary</p>
-                    <h1>A day exploring the Alps</h1>
-                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</span>
-                </div>
-        </section>
-        <section class="last-section">
-                <div class="box box-left">
-                    <img class="img-box" src="img/image_5.png" alt="Song for running">
-                    <p>Lifestyle</p>
-                    <h1>Top 10 song for running</h1>
-                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</span>
-                </div>
-                <div class="box">
-                    <img class="img-box" src="img/image_6.png" alt="Winter days">
-                    <p>Lifestyle</p>
-                    <h1>Cold winter days</h1>
-                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</span>
-                </div>
+            <div class="article">
+                <img class="article-img" src="img/image_3.png" alt="American dream">
+                <p>Photodiary</p>
+                <h2>American dream</h2>
+                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</span>
+            </div>
+            <div class="article">
+                <img class="article-img" src="img/image_4.png" alt="Alps">
+                <p>Photodiary</p>
+                <h2>A day exploring the Alps</h2>
+                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</span>
+            </div>
+            <div class="article">
+                <img class="article-img" src="img/image_5.png" alt="Song for running">
+                <p>Lifestyle</p>
+                <h2>Top 10 song for running</h2>
+                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</span>
+            </div>
+            <div class="article">
+                <img class="article-img" src="img/image_6.png" alt="Winter days">
+                <p>Lifestyle</p>
+                <h2>Cold winter days</h2>
+                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</span>
+            </div>
         </section>
         <form>
             <button>Load More</button>
