to add tag article

--- a/html-css/module-1-2/index.html
+++ b/html-css/module-1-2/index.html
@@ -19,34 +19,32 @@
     </header>
     <main class="container">
         <section> 
-            <div class="article">
+            <article>
                 <img class="img-box" src="img/image_1.png" alt="Festival">
                 <p>Lifestyle</p>
                 <h2>More than just a music festival</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
-            </div>
-            <div class="article">
+            </article>
+            <article>
                 <img class="img-box" src="img/image_2.png" alt="Coffe">
                 <p>Lifestyle</p>
                 <h2>Life tastes better with coffee</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
-            </div>
-            <div class="article">
+            </article>
+            <article>
                 <img class="img-box" src="img/image_3.png" alt="American dream">
                 <p>Photodiary</p>
                 <h2>American dream</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
-            </div>
-            <div class="article">
+            </article>
+            <article>
                 <img class="img-box" src="img/image_4.png" alt="Alps">
                 <p>Photodiary</p>
                 <h2>A day exploring the Alps</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
-            </div>
+            </article>
         </section>
-        <form>
             <button>Load More</button>
-        </form>
     </main>
 </body>
 </html>
