--- a/html-css/module-3/index.html
+++ b/html-css/module-3/index.html
@@ -20,46 +20,44 @@
     </header>
     <main class="container">
         <section> 
-            <div class="article">
+            <article>
                 <img class="article-img" src="img/image_1.png" alt="Festival">
-                <p>Lifestyle</p>
+                <p class="tittle">Lifestyle</p>
                 <h2>More than just a music festival</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
-            </div>
-            <div class="article">
+            </article>
+            <article>
                 <img class="article-img" src="img/image_2.png" alt="Coffe">
-                <p>Lifestyle</p>
+                <p class="tittle">Lifestyle</p>
                 <h2>Life tastes better with coffee</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
-            </div>
-            <div class="article">
+            </article>
+            <article>
                 <img class="article-img" src="img/image_3.png" alt="American dream">
-                <p>Photodiary</p>
+                <p class="tittle">Photodiary</p>
                 <h2>American dream</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
-            </div>
-            <div class="article">
+            </article>
+            <article>
                 <img class="article-img" src="img/image_4.png" alt="Alps">
-                <p>Photodiary</p>
+                <p class="tittle">Photodiary</p>
                 <h2>A day exploring the Alps</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
-            </div>
-            <div class="article">
+            </article>
+            <article>
                 <img class="article-img" src="img/image_5.png" alt="Song for running">
-                <p>Lifestyle</p>
+                <p class="tittle">Lifestyle</p>
                 <h2>Top 10 song for running</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
-            </div>
-            <div class="article">
+            </article>
+            <article>
                 <img class="article-img" src="img/image_6.png" alt="Winter days">
-                <p>Lifestyle</p>
+                <p class="tittle">Lifestyle</p>
                 <h2>Cold winter days</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
-            </div>
+            </article>
         </section>
-        <form>
             <button>Load More</button>
-        </form>
     </main>
 </body>
 </html>
