--- a/html-css/module-3/index.html
+++ b/html-css/module-3/index.html
@@ -19,7 +19,8 @@
         </nav>
     </header>
     <main class="container">
-        <section> 
+        <section>
+            <!-- <h1>Lifestyle and Photodiary section</h1> Я не стал прятать по вашему примеру так как в body задан font-size 0 и его и так нет, но если нужно зделаю как вы говорили -->
             <article>
                 <img class="article-img" src="img/image_1.png" alt="Festival">
                 <p class="tittle">Lifestyle</p>
