created index.html to module-4

--- a/html-css/module-4/index.html
+++ b/html-css/module-4/index.html
@@ -27,7 +27,7 @@
     <main class="container">
         <section>
             <h2>featured products</h2>
-            <ul>
+            <ul class="clearfix">
                 <li class="product-cart">
                     <img src="./img/product/product1.png" alt="Blue Tshirt">
                     <p></p>
@@ -71,7 +71,27 @@
             </ul>
         </section>
         <section>
-
+            <h2>latest news</h2>
+            <ul class="clearfix">
+                <li class="box">
+                    <img src="./img/blog/first.png" alt="Ipad">
+                    <h3>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+                    <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
+                    <button>Read More</button>
+                </li>
+                <li class="box">
+                    <img src="./img/blog/second.png" alt="Girls">
+                    <h3>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+                    <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
+                    <button>Read More</button>
+                </li>
+                <li class="box">
+                    <img src="./img/blog/third.png" alt="Bus">
+                    <h3>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+                    <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
+                    <button>Read More</button>
+                </li>
+            </ul>
         </section>
     </main>
 </body>
