fixed product cart

--- a/html-css/module-4/index.html
+++ b/html-css/module-4/index.html
@@ -64,7 +64,7 @@
                     <p></p>
                 </li>
                 <li class="product-cart">
-                    <img src="./img/product/product8.png" alt="Cool lingerie">
+                    <!-- <img src="./img/product/product8.png" alt="Cool lingerie"> -->
                     <p></p>
                     <p></p>
                 </li>
