To modification product cart

--- a/html-css/module-4/index.html
+++ b/html-css/module-4/index.html
@@ -28,45 +28,37 @@
         <section>
             <h2>featured products</h2>
             <ul class="clearfix">
-                <li class="product-cart">
-                    <img src="./img/product/product1.png" alt="Blue Tshirt">
-                    <p></p>
-                    <p></p>
+                <li class="product-cart heel clearfix">
+                    <p>blue tshirt</p>
+                    <p>26</p>
                 </li>
-                <li class="product-cart">
-                    <img src="./img/product/product2.png" alt="Woman shirt">
-                    <p></p>
-                    <p></p>
+                <li class="product-cart belt">
+                    <p>woman shirt</p>
+                    <p>31</p>
                 </li>
-                <li class="product-cart">
-                    <img src="./img/product/product3.png" alt="Yellow Tshirt">
-                    <p></p>
-                    <p></p>
+                <li class="product-cart hat">
+                    <p>yellow tshirt</p>
+                    <p>21</p>
                 </li>
-                <li class="product-cart">
-                    <img src="./img/product/product4.png" alt="Cool lingerie">
-                    <p></p>
-                    <p></p>
+                <li class="product-cart sac">
+                    <p>cool lingerie</p>
+                    <p>56</p>
                 </li>
-                <li class="product-cart">
-                    <img src="./img/product/product5.png" alt="Blue Tshirt">
-                    <p></p>
-                    <p></p>
+                <li class="product-cart bag">
+                    <p>blue tshirt</p>
+                    <p>26</p>
                 </li>
-                <li class="product-cart">
-                    <img src="./img/product/product6.png" alt="Woman shirt">
-                    <p></p>
-                    <p></p>
+                <li class="product-cart strap">
+                    <p>woman tshirt</p>
+                    <p>31</p>
                 </li>
-                <li class="product-cart">
-                    <img src="./img/product/product7.png" alt="Yellow Tshirt">
-                    <p></p>
-                    <p></p>
+                <li class="product-cart shoes">
+                    <p>yellow tshirt</p>
+                    <p>21</p>
                 </li>
-                <li class="product-cart">
-                    <!-- <img src="./img/product/product8.png" alt="Cool lingerie"> -->
-                    <p></p>
-                    <p></p>
+                <li class="product-cart glasses">
+                    <p>cool lingerie</p>
+                    <p>56</p>
                 </li>
             </ul>
         </section>
