--- a/html-css/module-4/index.html
+++ b/html-css/module-4/index.html
@@ -28,60 +28,100 @@
         <section>
             <h2>featured products</h2>
             <ul class="clearfix">
-                <li class="product-cart heel clearfix">
-                    <p>blue tshirt</p>
-                    <p>26</p>
+                <li class="product-cart">
+                    <a href="#">
+                        <img src="./img/product/product1.png" alt="heel" width="255px" height="282px">
+                        <div class="clearfix">
+                            <p>blue tshirt</p>
+                            <p>26</p>
+                        </div>
+                    </a>
                 </li>
-                <li class="product-cart belt">
-                    <p>woman shirt</p>
-                    <p>31</p>
+                <li class="product-cart">
+                    <a href="#">
+                        <img src="./img/product/product2.png" alt="belt" width="255px" height="282px">
+                        <div class="clearfix">
+                            <p>woman shirt</p>
+                            <p>31</p>
+                        </div>
+                    </a>
                 </li>
-                <li class="product-cart hat">
-                    <p>yellow tshirt</p>
-                    <p>21</p>
+                <li class="product-cart">
+                    <a href="#">
+                        <img src="./img/product/product3.png" alt="hat" width="255px" height="282px">
+                        <div class="clearfix">
+                            <p>yellow tshirt</p>
+                            <p>21</p>
+                        </div>
+                    </a>
                 </li>
-                <li class="product-cart sac">
-                    <p>cool lingerie</p>
-                    <p>56</p>
+                <li class="product-cart">
+                    <a href="#">
+                        <img src="./img/product/product4.png" alt="sac" width="255px" height="282px">
+                        <div class="clearfix">
+                            <p>cool lingerie</p>
+                            <p>56</p>
+                        </div>
+                    </a>
                 </li>
-                <li class="product-cart bag">
-                    <p>blue tshirt</p>
-                    <p>26</p>
+                <li class="product-cart">
+                    <a href="#">
+                        <img src="./img/product/product5.png" alt="bag" width="255px" height="282px">
+                        <div class="clearfix">
+                            <p>blue tshirt</p>
+                            <p>26</p>
+                        </div>
+                    </a>
                 </li>
-                <li class="product-cart strap">
-                    <p>woman tshirt</p>
-                    <p>31</p>
+                <li class="product-cart">
+                    <a href="#">
+                        <img src="./img/product/product6.png" alt="strap" width="255px" height="282px">
+                        <div class="clearfix">
+                            <p>woman shirt</p>
+                            <p>31</p>
+                        </div>
+                    </a>
                 </li>
-                <li class="product-cart shoes">
-                    <p>yellow tshirt</p>
-                    <p>21</p>
+                <li class="product-cart">
+                    <a href="#">
+                        <img src="./img/product/product7.png" alt="shoes" width="255px" height="282px">
+                        <div class="clearfix">
+                            <p>yellow tshirt</p>
+                            <p>21</p>
+                        </div>
+                    </a>
                 </li>
                 <li class="product-cart glasses">
-                    <p>cool lingerie</p>
-                    <p>56</p>
+                    <a href="#">
+                        <img src="./img/product/product8.png" alt="glasses" width="255px" height="282px">
+                        <div class="clearfix">
+                            <p>cool lingerie</p>
+                            <p>56</p>
+                        </div>
+                    </a>
                 </li>
             </ul>
         </section>
         <section>
             <h2>latest news</h2>
-            <ul class="clearfix">
+            <ul class=" blog clearfix">
                 <li class="box">
                     <img src="./img/blog/first.png" alt="Ipad">
                     <h3>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
                     <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
-                    <button>Read More</button>
+                    <a href="#">Read More</a>
                 </li>
                 <li class="box">
                     <img src="./img/blog/second.png" alt="Girls">
                     <h3>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
                     <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
-                    <button>Read More</button>
+                    <a href="#">Read More</a>
                 </li>
                 <li class="box">
                     <img src="./img/blog/third.png" alt="Bus">
                     <h3>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
                     <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
-                    <button>Read More</button>
+                    <a href="#">Read More</a>
                 </li>
             </ul>
         </section>
