--- a/html-css/module-5/imdex.html
+++ b/html-css/module-5/imdex.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>fourth</title>
+    <title>fifth</title>
     <link rel="stylesheet" href="./styles/normalize.css">
     <link rel="stylesheet" href="./styles/style.css">
 </head>
@@ -24,6 +24,54 @@
             </ul>
         </nav>
     </header>
-
+    <main>
+        <section class="container">
+            <h2>new collection</h2>
+            <ul class="clearfix">
+                <li class="product-cart">
+                    <a href="#">
+                        <img src="./img/catalog/product1.jpg" alt="Men in blue tshirt" width="255px" height="282px">
+                        <div class="clearfix">
+                            <p>blue tshirt</p>
+                            <p>26</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="product-cart">
+                    <a href="#">
+                        <img src="./img/catalog/product2.jpg" alt="woman in shirt" width="255px" height="282px">
+                        <div class="clearfix">
+                            <p>woman shirt</p>
+                            <p>31</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="product-cart">
+                    <a href="#">
+                        <img src="./img/catalog/product3.jpg" alt="men in lellow tshirt" width="255px" height="282px">
+                        <div class="clearfix">
+                            <p>yellow tshirt</p>
+                            <p>21</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="product-cart">
+                    <a href="#">
+                        <img src="./img/catalog/product4.jpg" alt="cool lingerie" width="255px" height="282px">
+                        <div class="clearfix">
+                            <p>cool lingerie</p>
+                            <p>56</p>
+                        </div>
+                    </a>
+                </li>
+            </ul>    
+        </section>
+    </main>
+    <footer>
+        <div class="copyright">
+            <span>All Right Reserved &#169; Dokan | Designed</span>
+            <address>ThemenGraph</address>
+        </div>
+    </footer>
 </body>
 </html>
