added icon and cart for product cart

--- a/html-css/module-5/imdex.html
+++ b/html-css/module-5/imdex.html
@@ -30,7 +30,27 @@
             <ul class="clearfix">
                 <li class="product-cart">
                     <a href="#">
-                        <img src="./img/catalog/product1.jpg" alt="Men in blue tshirt" width="255px" height="282px">
+                        <div class="img-active">
+                            <div class="buy-area"></div>
+                            <div class="icon-area">
+                                <button class="icon">
+                                        <img src="./img/icon/like.svg" alt="like" width="37px" height="37px">
+                                </button>
+                                <button class="icon two">
+                                    <img src="./img/icon/shuffle.svg" alt="shuffle" width="37px" height="37px">
+                                </button>
+                                <button class="icon three">
+                                        <img src="./img/icon/clock.svg" alt="clock" width="37px" height="37px">
+                                </button>
+                                <button class="cart clearfix">
+                                        <div class="cart-image">
+                                            <img src="./img/icon/cart.svg" alt="cart" width="37px" height="37px">
+                                        </div>
+                                        <span> add to card </span>
+                                </button>  
+                            </div>
+                            <img src="./img/catalog/product1.jpg" alt="Men in blue tshirt" width="255px" height="282px">
+                        </div>
                         <div class="clearfix">
                             <p>blue tshirt</p>
                             <p>26</p>
@@ -39,7 +59,27 @@
                 </li>
                 <li class="product-cart">
                     <a href="#">
-                        <img src="./img/catalog/product2.jpg" alt="woman in shirt" width="255px" height="282px">
+                        <div class="img-active">
+                            <div class="buy-area"></div>
+                            <div class="icon-area">
+                                    <button class="icon">
+                                            <img src="./img/icon/like.svg" alt="like" width="37px" height="37px">
+                                    </button>
+                                    <button class="icon two">
+                                        <img src="./img/icon/shuffle.svg" alt="shuffle" width="37px" height="37px">
+                                    </button>
+                                    <button class="icon three">
+                                            <img src="./img/icon/clock.svg" alt="clock" width="37px" height="37px">
+                                    </button>
+                                    <button class="cart clearfix">
+                                            <div class="cart-image">
+                                                <img src="./img/icon/cart.svg" alt="cart" width="37px" height="37px">
+                                            </div>
+                                            <span> add to card </span>
+                                    </button>  
+                            </div>
+                            <img src="./img/catalog/product2.jpg" alt="woman in shirt" width="255px" height="282px">
+                        </div>
                         <div class="clearfix">
                             <p>woman shirt</p>
                             <p>31</p>
@@ -48,7 +88,27 @@
                 </li>
                 <li class="product-cart">
                     <a href="#">
-                        <img src="./img/catalog/product3.jpg" alt="men in lellow tshirt" width="255px" height="282px">
+                        <div class="img-active">
+                            <div class="buy-area"></div>
+                            <div class="icon-area">
+                                    <button class="icon">
+                                            <img src="./img/icon/like.svg" alt="like" width="37px" height="37px">
+                                    </button>
+                                    <button class="icon two">
+                                        <img src="./img/icon/shuffle.svg" alt="shuffle" width="37px" height="37px">
+                                    </button>
+                                    <button class="icon three">
+                                            <img src="./img/icon/clock.svg" alt="clock" width="37px" height="37px">
+                                    </button>
+                                    <button class="cart clearfix">
+                                            <div class="cart-image">
+                                                <img src="./img/icon/cart.svg" alt="cart" width="37px" height="37px">
+                                            </div>
+                                            <span> add to card </span>
+                                    </button>  
+                            </div>
+                            <img src="./img/catalog/product3.jpg" alt="men in lellow tshirt" width="255px" height="282px">
+                        </div>
                         <div class="clearfix">
                             <p>yellow tshirt</p>
                             <p>21</p>
@@ -57,7 +117,27 @@
                 </li>
                 <li class="product-cart">
                     <a href="#">
-                        <img src="./img/catalog/product4.jpg" alt="cool lingerie" width="255px" height="282px">
+                        <div class="img-active">
+                            <div class="buy-area"></div>
+                            <div class="icon-area">
+                                    <button class="icon">
+                                            <img src="./img/icon/like.svg" alt="like" width="37px" height="37px">
+                                    </button>
+                                    <button class="icon two">
+                                        <img src="./img/icon/shuffle.svg" alt="shuffle" width="37px" height="37px">
+                                    </button>
+                                    <button class="icon three">
+                                            <img src="./img/icon/clock.svg" alt="clock" width="37px" height="37px">
+                                    </button>
+                                    <button class="cart clearfix">
+                                            <div class="cart-image">
+                                                <img src="./img/icon/cart.svg" alt="cart" width="37px" height="37px">
+                                            </div>
+                                            <span> add to card </span>
+                                    </button>  
+                            </div>
+                            <img src="./img/catalog/product4.jpg" alt="cool lingerie" width="255px" height="282px">
+                        </div>
                         <div class="clearfix">
                             <p>cool lingerie</p>
                             <p>56</p>
