--- a/html-css/module-5/index.html
+++ b/html-css/module-5/index.html
@@ -25,6 +25,17 @@
         </nav>
     </header>
     <main>
+        <div class="slider">
+            <button class="slider-ctrl prev">
+                <img src="./img/slider/angle-left.svg" alt="angle-left" width="105px" height="105px">
+            </button>
+            <button class="slider-ctrl next">
+                <img src="./img/slider/angle-right.svg" alt="angle-left" width="105px" height="105px">
+            </button>
+            <ul class="slides">
+                <li></li>
+            </ul>
+        </div>
         <section class="container">
             <h2>new collection</h2>
             <ul class="clearfix">
